# airhockey

./: .gitignore  README.md  pyproject.toml
airhockey/: config.py  err.py  utils.py
airhockey/query/: table.py
airhockey/read/: depreciated.py  query.py  table.py
demos/: demo_notebook.ipynb  read_demo.ipynb
